--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-streamlit
+streamlit>=1.36.0
 pandas
-numpy
 plotly
-requests
 scikit-learn
+requests
+numpy
+markdown-it-py
+rich
+sqlite3-binary
 openai
-sqlite3
 os
-
+time
+difflib
